14.jan (ws)
      - fix measure number layout
13.jan (ws)
      - first code for capella import
12.jan
      (la)
      - add support for transpose element in musicXML import
        (measure attribute diatonic and chromatic in musicXML /
        part attr in musescore but only chromatic)
10.jan
      (ws)
      - changed order of voice numbers in voice selector
      (la)
      - add support for part-abbreviation and barline span in musicXML import
9.jan
      - when moving rests raster vertical position with _spatium;
        whole rests and half rests outside the staff are drawn with
        ledger lines
      - updated spanish translation from Carlos Sanchiavedraz
      - extended frames/text functionality; see demo "schnee.mscz"
      - cleanups for qt4.5
8.jan
      (la)
      - add support for elision in musicXML import
7.jan
      - new flag: Display->ShowFrames
      - align tempo text to text baseline
      - text layout cleanups
5.1.2009
      - create more than one rest instead of dotted rest
      (tb)
      - updating Dutch translation by Jaap Plaisier
4.1.2009 (ws)
      - after loading of new score "cs" (currentScore) was not always set
        which crashes mscore
31.dec (ws)
      - fixed copy/paste of tuplets
      - updated russian translation from Alexandre Prokoudine
      - copy/paste of lyrics and chord symbols in passages
30.dec (ws)
      - fixed copy/paste lyrics and chord symbols
      - fix crash when starting empty and then create new score
      (db)
      - new PDFs for handbook (all six languages)
29.dec (ws)
      - new style parameter: begin repeat barline left margin
      - default drummap can now be defined in instrument template file "instruments.xml"
        for every instrument; look for instrument "triangle"
      - edit drum map: complete implementation of shortcuts
28.dec (ws)
      - changed handling of drums
      (db)
      - new PDF for English handbook
26.dec (ws)
      - allow tuplet entry with midi keyboard