@@ -213,6 +213,9 @@
          <channel>
             <program>56</program>
             </channel>
+         <channel name="mute">
+           <program value="59"/>
+           </channel>
          </instrument>
       <instrument>
          <name>D Trumpet</name>
@@ -221,6 +224,9 @@
          <channel>
             <program>56</program>
             </channel>
+         <channel name="mute">
+           <program value="59"/>
+           </channel>
          </instrument>
       <instrument>
          <name>C Trumpet</name>
@@ -228,6 +234,9 @@
          <channel>
             <program>56</program>
             </channel>
+         <channel name="mute">
+           <program value="59"/>
+           </channel>
          </instrument>
       <instrument>
          <name>E<symbol name="flat"/> Trumpet</name>
@@ -236,6 +245,9 @@
          <channel>
             <program>56</program>
             </channel>
+         <channel name="mute">
+           <program value="59"/>
+           </channel>
          </instrument>
       <instrument>
          <name>Muted Trumpet</name>
@@ -243,6 +255,9 @@
          <channel>
             <program>59</program>
             </channel>
+         <channel name="unmuted">
+           <program value="56"/>
+           </channel>
          </instrument>
       <instrument>
          <name>B<symbol name="flat"/> Cornet</name>
@@ -251,6 +266,9 @@
          <channel>
             <program>56</program>
             </channel>
+         <channel name="mute">
+           <program value="59"/>
+           </channel>
          </instrument>
       <instrument>
          <name>Flugelhorn</name>
@@ -259,6 +277,9 @@
          <channel>
             <program>56</program>
             </channel>
+         <channel name="mute">
+           <program value="59"/>
+           </channel>
          </instrument>
       <instrument>
          <name>Trombone</name>
@@ -534,6 +555,12 @@
          <channel>
             <program>40</program>
             </channel>
+         <channel name="pizzicato">
+           <program value="45"/>
+           </channel>
+         <channel name="tremolo">
+           <program value="44"/>
+           </channel>
          </instrument>
       <instrument>
          <name>Violins 1</name>
@@ -554,6 +581,12 @@
          <channel>
             <program>48</program>
             </channel>
+         <channel name="pizzicato">
+           <program value="45"/>
+           </channel>
+         <channel name="tremolo">
+           <program value="44"/>
+           </channel>
          </instrument>
       <instrument>
          <name>Viola</name>
@@ -562,6 +595,12 @@
          <channel>
             <program>41</program>
             </channel>
+         <channel name="pizzicato">
+           <program value="45"/>
+           </channel>
+         <channel name="tremolo">
+           <program value="44"/>
+           </channel>
          </instrument>
       <instrument>
          <name>Violas</name>
@@ -570,6 +609,12 @@
          <channel>
             <program>49</program>
             </channel>
+         <channel name="pizzicato">
+           <program value="45"/>
+           </channel>
+         <channel name="tremolo">
+           <program value="44"/>
+           </channel>
          </instrument>
       <instrument>
          <name>Violoncello</name>
@@ -578,6 +623,12 @@
          <channel>
             <program>42</program>
             </channel>
+         <channel name="pizzicato">
+           <program value="45"/>
+           </channel>
+         <channel name="tremolo">
+           <program value="44"/>
+           </channel>
          </instrument>
       <instrument>
          <name>Violoncellos</name>
@@ -586,6 +637,12 @@
          <channel>
             <program>49</program>
             </channel>
+         <channel name="pizzicato">
+           <program value="45"/>
+           </channel>
+         <channel name="tremolo">
+           <program value="44"/>
+           </channel>
          </instrument>
       <instrument>
          <name>Double Bass</name>
@@ -595,6 +652,12 @@
          <channel>
             <program>32</program>
             </channel>
+         <channel name="pizzicato">
+           <program value="45"/>
+           </channel>
+         <channel name="tremolo">
+           <program value="44"/>
+           </channel>
          </instrument>
       <instrument>
          <name>Contrabass</name>
@@ -604,6 +667,12 @@
          <channel>
             <program>43</program>
             </channel>
+         <channel name="pizzicato">
+           <program value="45"/>
+           </channel>
+         <channel name="tremolo">
+           <program value="44"/>
+           </channel>
          </instrument>
        <instrument>
          <name>Contrabasses</name>
@@ -613,6 +682,12 @@
          <channel>
             <program>49</program>
             </channel>
+         <channel name="pizzicato">
+           <program value="45"/>
+           </channel>
+         <channel name="tremolo">
+           <program value="44"/>
+           </channel>
          </instrument>
       </instrument-group>
 
